# easy-rebate

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  PERFORMANCE_DIAGNOSIS.md  README.md  README_MIGRATION.md  UNUSED_CLEANUP.md  build_faiss_db.py  check_key_order.py  check_sap_doc.py  compare_models.py  dev-backend.ps1  dev-frontend.ps1  dev.cmd  dev.sh  master_code.xlsx  notepad.ipynb  package-lock.json  pyproject.toml  refactor_spec.md  requirements.txt  run.sh  run_server.py  sap_upload.md  test.ipynb  test.py  to_do.md  問屋取引先コ_ド_小_店コ_ド26.01.27.xlsx  로그인ID.xlsx
backend/: API_EXAMPLES.md  CLAUDE.md  README.md  __init__.py  main.py  run.sh  unit_price_lookup.py
config/: form_types.json  rag_provider.json
data/: sap_upload_formulas.json
database/: ITEMS_TABLE_DESIGN.md  PERFORMANCE_ANALYSIS.md  SCHEMA.md  archive_migration.py  check_missing_foreign_keys.py  db_items.py  db_locks.py  db_manager.py  db_user_preferences.py  db_users.py  download_analyzed_docs.py  download_rag_tables.py  init_database.sql  migrate_jsonb_to_json.sql  normalize_type_condition.py  registry.py  reset_db.sh  restore_users.sql  super_import.csv  sync_users_from_excel.py  table_selector.py  unit_price.csv  upload_analyzed_docs.py  upload_rag_tables.py  users_import.csv  verify_schema.py
debug/: page_1_llm_response.txt  page_1_llm_response_parsed.json  page_1_prompt.txt
docs/: concurrent_analysis_performance.md  form_types_reference.md  parallel_ocr_llm.md  현업테스트_기능별비교체크리스트.xlsx
frontend/: CLAUDE.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+426 files in other folders)
