[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "react-rebate"
version = "1.0.0"
description = "条件請求書アップロード・検索システム (FastAPI + React)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "Pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "PyMuPDF>=1.23.0",
    "openai>=1.0.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "bcrypt>=4.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "google-generativeai>=0.3.0",
    "anthropic>=0.40.0",
    "APScheduler>=3.10.0",
]

[project.scripts]
rebate-server = "backend.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "database*", "modules*"]

[dependency-groups]
dev = []
